# vaportrail

./: .gitignore  .gitmodules  README.md  comConServer.py  get_deps.sh  pmcServer.py  setup_server.sh  start_server.sh  web
client/: build_apk.sh  comConClient  generic_client.py  pmcClient.conf  pmcClient.py  pmc_client
client/plugins/: __init__.py  __sine.py  _random.py  _sine.py  base_plugin.py  cpu.py  cpu_live.py  cpu_peak.py  diskspace.py  external_ip.py  machine_info.py  memory.py  sine.py  ssh_tunnel.py  stocks.py  stocks_historic.py  uptime.py
client/systemd/: comConD.service  pmcClient.service  pmc_client.service  readme  setup.sh
server/: pmc_server.py  start_server.sh
server/frontend/: index.html  package.json
server/frontend/css/: dash.css  mdl_icons.css
server/frontend/js/: dash.js  frontend.js  frontend.min.js
server/python/: pmc_server.py  server.py  start_server.sh
server/python/static/css/: dash.css
server/python/static/js/: dash.js
server/rust/: Cargo.toml
server/rust/src/: main.rs
server/static/: custom.css  dash.css
server/static/css/: custom.css  dash.css
server/static/js/: dash.js
server/templates/: dash.html  stats.html
static/: custom.css
templates/: stats.html
testing/: keep_running.py  test.py
